Fixed scrollbar.

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   width: 100%;
   font-family: Arial, sans-serif;
+  overflow: hidden;
 }
 
 .container {
