--- a/src/menuBar/meniu/meniuStyles.css
+++ b/src/menuBar/meniu/meniuStyles.css
@@ -3,6 +3,8 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   padding: 1rem;
+  max-height: 67.5vh;
+  overflow-y: auto;
 }
 
 .card {
@@ -42,6 +44,7 @@
   margin: 0.5rem;
   padding: 0.5rem 0.5rem;
   text-align: center;
+  overflow-y: auto;
 }
 
 .child {
